@@ -1,3 +1,9 @@
+2008-05-13  Anatoly Sokolov <aesok@post.ru>
+
+	* config/avr/avr.h (machine_function): Add 'is_leaf' field.
+	* config/avr/avr.c (avr_regs_to_save): Compute 'machine->is_leaf'.
+	Use 'machine->is_leaf' instead of 'leaf_func_p'.
+
 2008-05-13  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/36227
